# tweede-kamer-stemming-scraper

./: .gitignore  LICENSE  README.md
01_scrape/: cli.py  main.py  pyproject.toml  requirements.txt
01_scrape/scrape/: main.py
02_load/: cli.py  default.env  pyproject.toml
02_load/schemas/: 01_stemming.sql  02_motie.sql  03_indieners.sql  04_details.sql
02_load/scripts/: create_tables.py  import_csv.py  start_postgres.sh
03_process/: .gitignore  main.py  pyproject.toml
03_process/dbt/: profiles.yml
03_process/process/: dbt_project.yml
03_process/process/models/sources/: sources.yml
03_process/process/models/staging/: schema.yml  stg__details.sql  stg__indieners.sql  stg__motie.sql  stg__stemming.sql
processing/: cli.py  main.py  pyproject.toml
processing/schemas/: 004_details.sql
processing/scripts/: import_csv.py
scraper/: LICENSE  README.md  main.py  pyproject.toml
