[project]
name = "scrape"
version = "0.1.0"
description = "A Python scraper for Tweede Kamer motions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "black>=25.1.0",
    "click>=8.2.1",
    "dateparser>=1.2.2",
    "isort>=6.0.1",
    "lxml>=6.0.1",
    "polars>=1.33.1",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "wget>=3.2",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
