[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "black>=25.1.0",
    "isort>=6.0.1",
    "lxml>=6.0.1",
    "polars>=1.33.1",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "wget>=3.2",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
